fix(styles): fix border-radius on text inputs on safari

--- a/components/search-input.module.scss
+++ b/components/search-input.module.scss
@@ -26,9 +26,11 @@
 }
 
 .input {
+	-webkit-apperance: none;
+	appearance: none;
 	margin-left: lib.$layout-spacing-x-small;
 	padding-left: lib.$layout-spacing-x-small;
-	border-radius: 0px;
+	border-radius: none;
 	width: 100%;
 
 	transition: all .2s ease-out;
